2015-03-03  Agustín Martín Domingo <agustin6martin@gmail.com>

	* textmodes/ispell.el (ispell-dicts-name2locale-equivs-alist)
	(ispell-hunspell-fill-dictionary-entry)
	(ispell-find-hunspell-dictionaries)
	(ispell-set-spellchecker-params): New generic name for
	`ispell-hunspell-dictionary-equivs-alist'.
	(ispell-aspell-add-aliases): Also use
	`ispell-dicts-name2locale-equivs-alist' to get aspell aliases for
	standard dict names.

2015-02-24  Glenn Morris  <rgm@gnu.org>

	* net/browse-url.el (browse-url-firefox-startup-arguments):
	Make obsolete.
	(browse-url-firefox): Doc fix.  Remove -remote, which no longer
	exists in Firefox 36.  (Bug#19921)
	(browse-url-firefox-sentinel): Remove function.

2015-02-23  Eli Zaretskii  <eliz@gnu.org>

	* frame.el (blink-cursor-timer-function): Don't increment
	blink-cursor-blinks-done counter when a menu is active on a w32
	frame.  (Bug#19925)

2015-02-19  Juri Linkov  <juri@linkov.net>

	* comint.el (comint-line-beginning-position): Revert searching for
	the prompt when comint-use-prompt-regexp is non-nil because it
	doesn't distinguish input from output.  Check the field property
	`output' for the case when comint-use-prompt-regexp is nil.
	(Bug#19710)

2015-02-15  Jérémy Compostella  <jeremy.compostella@gmail.com>

	* net/tramp-sh.el (tramp-remote-process-environment): Disable paging
	with PAGER=cat.  (Bug#19870)

2015-02-13  Glenn Morris  <rgm@gnu.org>

	* textmodes/flyspell.el (flyspell-duplicate-distance):
	Bump :version.

2015-02-13  Eli Zaretskii  <eliz@gnu.org>

	* textmodes/text-mode.el (text-mode-syntax-table): Make some
	punctuation character behave as word-constituent, for more
	compatibility with Unicode.

	* simple.el (transient-mark-mode): Doc fix.  (Bug#19841)

2015-02-12  Agustín Martín Domingo <agustin6martin@gmail.com>

	Improve string search in `flyspell-word-search-*`. (Bug#16800)
	* flyspell.el (flyspell-duplicate-distance): Limit default search
	distance for duplicated words to 40000.